--- a/VideoGameTrading/Views/Home/Index.cshtml
+++ b/VideoGameTrading/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home / Homepage";
 }
 
-<div>
-    <h4 class="display-4 fw-bold mb-5">@ViewData["Title"]</h4>
+<div class="container mt-5">
+    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
     <p class="text-body-secondary">Welcome. This is a site for people to rent video games.</p>
 </div>
