--- a/VideoGameTrading/Views/Home/Privacy.cshtml
+++ b/VideoGameTrading/Views/Home/Privacy.cshtml
@@ -3,8 +3,8 @@
     ViewData["Link_privacy"] = "https://azure.microsoft.com/en-us/explore/trusted-cloud/privacy";
 }
 
-<div>
-    <h4 class="display-4 fw-bold mb-5">@ViewData["Title"]</h4>
+<div class="container mt-5">
+    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
     <p class="text-body-secondary">
         Online hosting disclaimer:
         <ul>
