--- a/VideoGameTrading/Views/Home/Sitemap.cshtml
+++ b/VideoGameTrading/Views/Home/Sitemap.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home / Sitemap";
 }
 
-<div>
-    <h4 class="display-4 fw-bold mb-5">@ViewData["Title"]</h4>
+<div class="container mt-5">
+    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
     <ul class="text-body-secondary">
         <li>
             <strong>Home</strong>
