--- a/VideoGameTrading/wwwroot/css/site.css
+++ b/VideoGameTrading/wwwroot/css/site.css
@@ -1,17 +1,23 @@
-/*a {
-	color: var(--bs-info);
+.shadow-lg-hack-top {
+	/* Flip vertical direction	*/
+	box-shadow: 0 -1rem 3rem rgba(0, 0, 0, 0.175);
 }
 
-	a:not(.navbar-brand):hover, a:not(.navbar-brand):active {
-		color: #87CEEB !important;
-	}*/
-
-form * {
-	margin: 0.5rem 0;
+.shadow-lg-hack-end {
+	/* Disable bottom direction and enable right direction	*/
+	box-shadow: 1rem 0 3rem rgba(0, 0, 0, 0.175);
 }
 
-label {
-	margin-right: 1rem;
+header, header nav, footer {
+	height: 64px;
+	min-height: 64px;
+	max-height: 64px;
+}
+
+main {
+	height: calc(100vh - 64px);
+	min-height: calc(100vh - 64px);
+	max-height: calc(100vh - 64px);
 }
 
 .dropdown button:after {
@@ -27,9 +33,12 @@ label {
 		background-color: var(--bs-warning) !important;
 	}
 
-.shadow-lg-hack {
-	/* Flip vertical direction	*/
-	box-shadow: 0 -1rem 3rem rgba(0, 0, 0, 0.175);
+form * {
+	margin: 0.5rem 0;
+}
+
+label {
+	margin-right: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -39,6 +48,10 @@ label {
 }
 
 @media (min-width: 992px) {
+	#search {
+		width: 50%;
+	}
+
 	.dropdown .dropdown-menu {
 		display: block;
 		visibility: hidden;
