--- a/VideoGameTrading/wwwroot/css/site.css
+++ b/VideoGameTrading/wwwroot/css/site.css
@@ -8,18 +8,6 @@
 	box-shadow: 1rem 0 3rem rgba(0, 0, 0, 0.175);
 }
 
-header, header nav, footer {
-	height: 64px;
-	min-height: 64px;
-	max-height: 64px;
-}
-
-main {
-	height: calc(100vh - 64px);
-	min-height: calc(100vh - 64px);
-	max-height: calc(100vh - 64px);
-}
-
 .dropdown button:after {
 	border: none;
 }
@@ -33,8 +21,18 @@ main {
 		background-color: var(--bs-warning) !important;
 	}
 
-form * {
-	margin: 0.5rem 0;
+.form-check-input:checked[type="radio"] {
+	--bs-form-check-bg-image: none;
+}
+
+.form-check-input:active, .form-check-input:focus {
+	border-color: var(--bs-warning);
+}
+
+.form-check-input:checked {
+	background-color: var(--bs-warning);
+	border-color: var(--bs-warning);
+	color: red;
 }
 
 label {
