Term Project - Draft - v4

--- a/VideoGameTrading/Views/Home/Privacy.cshtml
+++ b/VideoGameTrading/Views/Home/Privacy.cshtml
@@ -3,7 +3,7 @@
     ViewData["Link_privacy"] = "https://azure.microsoft.com/en-us/explore/trusted-cloud/privacy";
 }
 
-<div class="container mt-5">
+<div class="vh-100 container my-5">
     <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
     <p class="text-body-secondary">
         Online hosting disclaimer:
