--- a/VideoGameTrading/Views/Shop/Cart.cshtml
+++ b/VideoGameTrading/Views/Shop/Cart.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Shop / Cart";
 }
 
-<div class="container mt-5">
+<div class="container my-5">
     <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
+    <p class="text-body-secondary">There is nothing in your cart currently.</p>
 </div>
