Term Project - Draft - v5

--- a/VideoGameTrading/Views/Shop/Index.cshtml
+++ b/VideoGameTrading/Views/Shop/Index.cshtml
@@ -134,7 +134,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="condition" id="condition2">
                     <label class="form-check-label" for="condition2">
-                        Excellent +10
+                        Excellent
                     </label>
                 </div>
                 <div class="form-check">
@@ -163,8 +163,8 @@
         @* Search *@
         <div class="d-flex flex-column align-items-center container mb-5">
             <div class="d-flex flex-column gap-3 ms-auto">
+                <a class="btn btn-lg btn-secondary rounded-0 fw-bold" href="/shop">RESET FILTERS</a>
                 <a class="btn btn-lg btn-warning rounded-0 text-dark fw-bold" href="/shop/create">CREATE PRODUCT</a>
-                <a class="btn btn-lg btn-secondary rounded-0 text-dark fw-bold" href="/shop">RESET FILTERS</a>
             </div>
             <div id="search" class="input-group mt-5">
                 <input class="form-control border-secondary-subtle" name="search" type="search" placeholder="Search games by title..." />
@@ -176,6 +176,7 @@
             @if (@Model != null) {
                 @foreach (var item in Model) {
                     <partial name="~/Views/Shop/Card.cshtml" model="new Item {
+                        InCart = item.InCart,
                         Title = item.Title,
                         ItemId = item.ItemId,
                         ReleaseYear = @item.ReleaseYear,
