--- a/VideoGameTrading/Views/Home/Sitemap.cshtml
+++ b/VideoGameTrading/Views/Home/Sitemap.cshtml
@@ -6,22 +6,22 @@
     <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
     <ul class="text-body-secondary">
         <li>
-            <strong>Home</strong>
+            <span class="fw-bold">Home</span>
             <ul>
-                <li><strong>Homepage:</strong> A default landing page for site visitors.</li>
-                <li><strong>Privacy:</strong> Displays privacy disclaimers.</li>
-                <li><strong>Sitemap:</strong> A page that provides descriptions for each of the site's pages.</li>
+                <li><span class="fw-bold">Homepage:</span> A default landing page for site visitors.</li>
+                <li><span class="fw-bold">Privacy:</span> Displays privacy disclaimers.</li>
+                <li><span class="fw-bold">Sitemap:</span> A page that provides descriptions for each of the site's pages.</li>
             </ul>
         </li>
         <li>
-            <strong>Shop</strong>
+            <span class="fw-bold">Shop</span>
             <ul>
-                <li><strong>Homepage:</strong> Displays all products, search results, and search filters.</li>
-                <li><strong>Cart:</strong> Displays a collection of products that have been saved to your virtual cart.</li>
-                <li><strong>Product:</strong> Allows the viewing of a single product.</li>
-                <li><strong>Add:</strong> Displays form fields to create a new product.</li>
-                <li><strong>Card:</strong> Product component.</li>
-                <li><strong>Error:</strong> 404 page for products route specially.</li>
+                <li><span class="fw-bold">Homepage:</span> Displays all products, search results, and search filters.</li>
+                <li><span class="fw-bold">Cart:</span> Displays a collection of products that have been saved to your virtual cart.</li>
+                <li><span class="fw-bold">Product:</span> Allows the viewing of a single product.</li>
+                <li><span class="fw-bold">Add:</span> Displays form fields to create a new product.</li>
+                <li><span class="fw-bold">Card:</span> Product component.</li>
+                <li><span class="fw-bold">Error:</span> 404 page for products route specially.</li>
             </ul>
         </li>
     </ul>
