--- a/VideoGameTrading/Views/Shop/Cart.cshtml
+++ b/VideoGameTrading/Views/Shop/Cart.cshtml
@@ -1,8 +1,40 @@
-﻿@{
+﻿@model List<Item>
+@{
     ViewData["Title"] = "Shop / Cart";
+    string products = "";
+    double subTotal = 0.0d;
 }
 
 <div class="container my-5">
     <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
-    <p class="text-body-secondary">There is nothing in your cart currently.</p>
+    @if (@Model != null) {
+        if (@Model.Count > 0) {
+            @* Products *@
+            <div class="row row-cols-1 row-cols-lg-3 g-4 container my-5">
+                @foreach (var item in Model) {
+                    products += $"Product {item.ItemId} - ${item.Price.ToString()}\n\n";
+                    subTotal = subTotal + item.Price;
+
+                    <partial name="~/Views/Shop/Card.cshtml" model="new Item {
+                        InCart = item.InCart,
+                        Title = item.Title,
+                        ItemId = item.ItemId,
+                        ReleaseYear = @item.ReleaseYear,
+                        Price =  @item.Price,
+                        AgeRange = @item.AgeRange,
+                        Condition = @item.Condition,
+                        From = @item.From
+                    }" />
+                }
+            </div>
+            @* Cart Calculations *@
+            <div class="d-flex flex-column">
+                <h6 class="display-6 fw-bold mb-5">Calculations</h6>
+                <p id="products">@products</p>
+                <big><big>Subtotal: <span class="fw-bold">$@subTotal</span></big></big>
+            </div>
+        } else {
+            <p class="text-body-secondary m-0 p-0">There is nothing in your cart currently.</p>
+        }
+    }
 </div>
