--- a/VideoGameTrading/Views/Home/Sitemap.cshtml
+++ b/VideoGameTrading/Views/Home/Sitemap.cshtml
@@ -8,20 +8,25 @@
         <li>
             <span class="fw-bold">Home</span>
             <ul>
-                <li><span class="fw-bold">Homepage:</span> A default landing page for site visitors.</li>
+                <li><span class="fw-bold">Homepage:</span> Default landing page for site visitors.</li>
                 <li><span class="fw-bold">Privacy:</span> Displays privacy disclaimers.</li>
-                <li><span class="fw-bold">Sitemap:</span> A page that provides descriptions for each of the site's pages.</li>
+                <li><span class="fw-bold">Sitemap:</span> Page that provides descriptions for each of the site's pages.</li>
             </ul>
         </li>
         <li>
             <span class="fw-bold">Shop</span>
             <ul>
                 <li><span class="fw-bold">Homepage:</span> Displays all products, search results, and search filters.</li>
-                <li><span class="fw-bold">Cart:</span> Displays a collection of products that have been saved to your virtual cart.</li>
                 <li><span class="fw-bold">Product:</span> Allows the viewing of a single product.</li>
                 <li><span class="fw-bold">Add:</span> Displays form fields to create a new product.</li>
                 <li><span class="fw-bold">Card:</span> Product component.</li>
-                <li><span class="fw-bold">Error:</span> 404 page for products route specially.</li>
+                <li><span class="fw-bold">Error:</span> 404 page for product related routes.</li>
+            </ul>
+        </li>
+        <li>
+            <span class="fw-bold">Cart</span>
+            <ul>
+                <li><span class="fw-bold">Homepage:</span> Displays a collection of products that have been saved to a virtual cart.</li>
             </ul>
         </li>
     </ul>
