--- a/VideoGameTrading/Views/Shared/_Layout.cshtml
+++ b/VideoGameTrading/Views/Shared/_Layout.cshtml
@@ -43,23 +43,12 @@
                             </ul>
                         </li>
                         @* Shop *@
-                        <li class="nav-item dropdown">
-                            <button class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Shop
-                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                                </svg>
-                            </button>
-                            <ul class="dropdown-menu bg-dark border-dark-subtle rounded-0">
-                                @* Homepage *@
-                                <li>
-                                    <a class="dropdown-item text-body-secondary" href="/shop">Homepage</a>
-                                </li>
-                                @* Cart *@
-                                <li>
-                                    <a class="dropdown-item text-body-secondary border-top border-dark-subtle" href="/shop/cart">Cart</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-body-secondary" href="/shop">Shop</a>
+                        </li>
+                        @* Cart *@
+                        <li class ="nav-item">
+                            <a class="nav-link text-body-secondary" href="/cart">Cart</a>
                         </li>
                     </ul>
                 </div>
