Term Project - Draft - v7

--- a/VideoGameTrading/Views/Cart/Index.cshtml
+++ b/VideoGameTrading/Views/Cart/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container my-5">
-    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
+    <h6 class="display-6 fw-bold text-light mb-5">@ViewData["Title"]</h6>
     @if (@Model != null) {
         if (@Model.Count > 0) {
             @* Products *@
@@ -35,7 +35,12 @@
                 <big><big>Subtotal: <span class="fw-bold">$@subTotal</span></big></big>
             </div>
         } else {
-            <p class="text-body-secondary m-0 p-0">There is nothing in your cart currently.</p>
+            <p class="text-body-secondary m-0 p-0">
+                There is nothing in your cart currently.
+                <ul>
+                    <li class="text-body-secondary">Set a product item's <span class="fw-bold text-light">InCart</span> property to a value of <span class="fw-bold text-light">true</span> to add it the cart.</li>
+                </ul>
+            </p>
         }
     }
 </div>
