--- a/VideoGameTrading/Views/Shop/Create.cshtml
+++ b/VideoGameTrading/Views/Shop/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container my-5">
-    <h6 class="display-4 fw-bold mb-5">@ViewData["Title"]</h6>
+    <h6 class="display-4 fw-bold text-light mb-5">@ViewData["Title"]</h6>
     <form method="post">
         @* Title *@
         <div>
