--- a/VideoGameTrading/Views/Shop/Index.cshtml
+++ b/VideoGameTrading/Views/Shop/Index.cshtml
@@ -159,7 +159,7 @@
         </div>
     </form>
     <form class="overflow-auto w-100 my-5" method="post">
-        <h6 class="display-6 fw-bold container mb-5">@ViewData["Title"]</h6>
+        <h6 class="display-6 fw-bold text-light container mb-5">@ViewData["Title"]</h6>
         @* Search *@
         <div class="d-flex flex-column align-items-center container mb-5">
             <div class="d-flex flex-column gap-3 ms-auto">
