--- a/VideoGameTrading/Views/Home/Index.cshtml
+++ b/VideoGameTrading/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="vh-100 container my-5">
-    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
+    <h6 class="display-6 fw-bold text-light mb-5">@ViewData["Title"]</h6>
     <p class="text-body-secondary">Welcome. This is a site for people to rent video games.</p>
 </div>
