--- a/VideoGameTrading/Views/Home/Privacy.cshtml
+++ b/VideoGameTrading/Views/Home/Privacy.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="vh-100 container my-5">
-    <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
+    <h6 class="display-6 fw-bold text-light mb-5">@ViewData["Title"]</h6>
     <p class="text-body-secondary">
         Online hosting disclaimer:
         <ul>
