--- a/VideoGameTrading/Views/Shop/Product.cshtml
+++ b/VideoGameTrading/Views/Shop/Product.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = $"Shop / Product / {@Model.ItemId}";
 
     <div class="container my-5">
-        <h6 class="display-6 fw-bold mb-5">@ViewData["Title"]</h6>
+        <h6 class="display-6 fw-bold text-light mb-5">@ViewData["Title"]</h6>
         <partial name="~/views/shop/card.cshtml" model="@Model" />
     </div>
 } else {
